# gallery-autosorter

./: .gitignore  CONTRIBUTING.md  README.md  debug_exif.py  debug_folder.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
src/: __init__.py  main.py
src/utils/: __init__.py  file_ops.py
